--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -2,43 +2,42 @@
 <h3>Angular ui-scroll sample with {{list.length}} entries</h3>
 
 
-<div id = "listViewPort" ng-hide="false" class = "forceScrollBar scrollingList" Style = "height: 630px;" ui-scroll-viewport>
+<div ng-hide="false" class = "forceScrollBar scrollingList" Style = "height: 630px;" ui-scroll-viewport>
     <a
             ui-scroll="user in viewSource"
             buffer-size = "9"
             adapter = "uiScrollAdapter"
-            class="list-group-item animated entry {{user.subscribed?'bluegray':''}}"
+            class="list-group-item {{user.subscribed?'bluegray':''}}"
             data-ng-href=""
 
             >
         <div class="row language-entry-row" >
 
             <div style="width: 10px; padding: 0; float: left; margin-bottom: -16px;">
-                <div class="translation-status-bar">
+                <div>
                                         <span class="green"
                                               data-ng-if="user.subscribed"></span>
                 </div>
             </div>
 
-            <div class = " elipsis"
-                 ng-class="user.subscribed? 'lead col-xs-2' : 'col-xs-4'">
+            <div ng-class="user.subscribed? 'lead col-xs-2' : 'col-xs-4'">
                 <input type="checkbox" class = "vAlign"
-                       ng-model = "user.subscribed" ng-click="$event.stopPropagation();" ng-change="alert('user : '+user.name+ ' selected : '+user.selected)">
+                       ng-model = "user.subscribed" ng-click="$event.stopPropagation();" >
                                     <span class="list-group-item-text" style = "margin-left:10px;"
                                           data-ng-bind="::user.name" title = "{{user.name}}">
                                     </span>
             </div>
             <div ng-if="user.subscribed"
-                 class="list-group-item-text col-xs-2 elipsis text-grey"
+                 class="list-group-item-text col-xs-2 text-grey"
                  data-ng-bind="user.subscriptionDate"
                  title = "{{user.subscriptionDate}}">
             </div>
-            <div class="list-group-item-text elipsis"
+            <div class="list-group-item-text"
                  ng-class="user.subscribed? 'lead col-xs-4' : 'col-xs-4'"
                  data-ng-bind="user.firstName"
                  title = "{{user.firstName}}">
             </div>
-            <div class="list-group-item-text elipsis col-xs-3"
+            <div class="list-group-item-text col-xs-3"
                  data-ng-bind="user.address"
                  title = "{{user.address}}">
             </div>
